--- a/application.yml
+++ b/application.yml
@@ -2,6 +2,8 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8100/eureka/
+server:
+  port: 8988
 ---
 spring:
   profiles: subject
