--- a/application.yml
+++ b/application.yml
@@ -4,27 +4,10 @@ eureka:
       defaultZone: http://localhost:8100/eureka/
 server:
   port: 8988
----
-spring:
-  profiles: subject
-words: I,You,He,She,It
 
 ---
 spring:
-  profiles: verb
-words: ran,knew,had,saw,bought
+  profiles: application_1
+server:
+  port: 8009 
 
----
-spring:
-  profiles: article
-words: a,the
-
----
-spring:
-  profiles: adjective
-words: reasonable,leaky,suspicious,ordinary,unlikely
-
----
-spring:
-  profiles: noun
-words: boat,book,vote,seat,backpack,partition,groundhog  
