--- a/application.yml
+++ b/application.yml
@@ -8,6 +8,16 @@ server:
 ---
 spring:
   profiles: application_1
-server:
+  server:
   port: 8009 
+  
+---  
+cassandra:
+  port: 9042
+  contact-points: localhost
+  keyspace-name: rest_workshop
+
+---
+    
+  
 
