--- a/application.yml
+++ b/application.yml
@@ -5,6 +5,15 @@
 # server:
 #   port: 8988
 
+eureka:
+  server:
+    port: 8761
+
+eureka:
+  client:
+    register-with-eureka: false
+    fetch-registry: false
+
 spring:
   profiles: application_1
 server:
