--- a/application-dev.properties
+++ b/application-dev.properties
@@ -1,2 +1,7 @@
-user.role=DevOps
+name=Kafka Dev
+group_id=myGroup
+bootstrap_servers=[51.103.210.207:19091,51.103.210.207:29091,51.103.210.207:39091]
+topic=topic
+
+
 
