--- a/application-dev.properties
+++ b/application-dev.properties
@@ -1,6 +1,6 @@
 name=Kafka Dev
 group_id=myGroup
-bootstrap_servers=[51.103.210.207:19091,51.103.210.207:29091,51.103.210.207:39091]
+bootstrap_servers=51.103.210.207:19091, 51.103.210.207:29091, 51.103.210.207:39091
 topic=topic
 
 
