--- a/application-dev.properties
+++ b/application-dev.properties
@@ -2,6 +2,8 @@ name=Kafka Dev
 group_id=myGroup
 bootstrap_servers=51.103.210.207:19091,51.103.210.207:29091,51.103.210.207:39091
 topic=topic
+kafka_workers_num=50
+kafka_jobs_num=100
 
 
 
